Closed
Bug 1568536
Opened 3 years ago
Closed 3 years ago
Don't propagate viewport styles for boxless elements.
Categories
(Core :: Layout, defect, P3)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla70
Tracking | Status | |
---|---|---|
firefox70 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
Details
Attachments
(2 files)
Assignee | ||
Comment 1•3 years ago
|
||
Resolution is at:
Tests are at https://chromium-review.googlesource.com/c/chromium/src/+/1547974,
I'll make sure to wait until they're in the tree and ensure they're passing.
Assignee | ||
Comment 2•3 years ago
|
||
Return a raw pointer instead of a strong reference to a ComputedStyle, and
handle the case of the style not being present by returning null rather than
requiring an extra function to check it and crashing if the precondition is not
met.
Also, name them so that it's clear they just return outdated styles and don't
make any extra effort.
This is just cleanup that makes the next patch easier / more obvious.
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/778ea34e5994 Simplify some style system APIs. r=heycam https://hg.mozilla.org/integration/autoland/rev/400b06aac33e Don't propagate viewport styles from display: none or display: contents elements. r=dholbert
Comment 4•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/778ea34e5994
https://hg.mozilla.org/mozilla-central/rev/400b06aac33e
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
You need to log in
before you can comment on or make changes to this bug.
Description
•