layout/base/nsCSSFrameConstructor.cpp
@@ -4723,12 +4723,15 @@ already_AddRefed<ComputedStyle> nsCSSFrameConstructor::ResolveComputedStyle(
   // can go. Note that this is not a correctness issue, since we'll restyle
   // later in any case.
   //
-  // Also, this probably doesn't need to be a strong ref...
-  //
   // Do NOT add new callers to this function in this file, ever, or I'll find
   // out.
-  RefPtr<ComputedStyle> parentStyle =
-      Servo_Element_GetPrimaryComputedValues(parent).Consume();
+  //
+  // FIXME(emilio): The const_cast is unfortunate, but it's not worse than what
+  // we did before.
+  auto* parentStyle =
+      const_cast<ComputedStyle*>(Servo_Element_GetMaybeOutOfDateStyle(parent));
+  MOZ_ASSERT(parentStyle,
+             "How are we inserting text frames in an unstyled element?");
   return mPresShell->StyleSet()->ResolveStyleForText(aContent, parentStyle);
 }
 
